2000-05-31  Nick Clifton  <nickc@cygnus.com>

	* opintl.h (_(String)): Explain why dgettext is used instead
	of gettext. 

2000-05-31  Ulrich Drepper  <drepper@redhat.com>

	* elf.c (_bfd_elf_slurp_version_tables): Correct reading of version
	definitions.  We must not assume they are sorted in the file
	according to their index numbers.

2000-05-31  Alan Modra  <alan@linuxcare.com.au>

	* elf-hppa.h: (elf_hppa_final_link_relocate): Use e_rsel field
        selector for R_PARISC_PCREL17R.  R_PARISC_DIR17R and
        R_PARISC_DIR17F are for absolute branches; Handle them as such.

2000-05-30  Nick Clifton  <nickc@cygnus.com>

	* cpu-i960.c (scan_960_mach): Accept 80960KA, 80960KB,
	80960CA, 80960MC as valid machine names.

2000-05-30  H.J. Lu  <hjl@gnu.org>

	* elflink.c (_bfd_elf_link_record_dynamic_symbol): Clear the
	visibility bits if the symbol is undefined. Correctly handle
	weak undefined symbols with hidden and internal attributes.

	* elflink.h (elf_link_add_object_symbols): Always turn the
	symbol into local if it has the hidden or internal attribute.

2000-05-29  Philip Blundell  <philb@gnu.org>

	* ppcboot.c:  Add packed attribute if compiling with GCC.

2000-05-29  Anatoly Vorobey  <mellon@pobox.com>

	* elf.c (_bfd_elf_link_hash_table_init): Initialize dynlocal.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am: Update dependencies with "make dep-am"
	* Makefile.in: Regenerate.

	* sysdep.h (gettext, dgettext, dcgettext, textdomain,
	bindtextdomain): Replace defines with those from intl/libgettext.h
	to quieten gcc warnings.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* aoutx.h (find_nearest_line): Use IS_ABSOLUTE_PATH.

	* archive.c (normalize, bfd_bsd_truncate_arname,
	bfd_gnu_truncate_arname) [HAVE_DOS_BASED_FILE_SYSTEM]: Support
	file names with backslashes.

	* cache.c (bfd_open_file) [__MSDOS__]: Don't unlink the file
	before opening it.

	* sysdep.h: Include filenames.h.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>
